Added assets folder with avatar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </div>
 
                         <div class="contact-info__block contact-info__block--center">
-                            <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
+                            <img class="contact-info__avatar" src="assets/bulka.png" alt="Avatar">
                         </div>
 
                         <div class="contact-info__block">
