--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Résumé</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -67,6 +69,14 @@
                       all I do is sleep and try to help out hoomans with their projects whenever 
                       they need me.
                     </p>
+                  </div>
+                </div>
+              </div>
+              <div class="container">
+                <div class="resume__block">
+                  <div class="skills">
+                    <h3 class="skills__header">Skills</h3>
+                    <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
                   </div>
                 </div>
               </div>
