Update index.html conflict img
Small fix on prod

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             I never knew that JS is so comfortable to use and the day I found it out, I can't stop learning it. <br>
                             As I heard from university people, this place can be incredible point of getting endless possibilities in Fullstack field.
                             So, I'm here. Ready to learn.<br>
-                            <img src="/assets/memes.jpg" class="" alt="" max-width="200" height="200"/>
+                            <img src="/assets/memes.jpg"  alt="meme" width="200" height="200"/>
                         </p>
                     </div>
                 </div>
